--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "agora-rtc-sdk-ng": "^4.22.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-vue": "^8.2.0",
     "lucide-vue-next": "^0.429.0",
     "nuxt": "^3.12.4",
     "radix-vue": "^1.9.4",
