--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@nuxt/icon": "^1.4.7",
     "@nuxtjs/leaflet": "^1.2.2",
+    "@pinia/nuxt": "^0.5.4",
     "@vueuse/core": "^11.0.1",
     "agora-rtc-sdk-ng": "^4.22.0",
+    "axios": "^1.7.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-vue": "^8.2.0",
     "lucide-vue-next": "^0.429.0",
     "nuxt": "^3.12.4",
+    "pinia": "^2.2.2",
     "radix-vue": "^1.9.4",
     "shadcn-nuxt": "^0.10.4",
     "tailwind-merge": "^2.5.2",
