Reset Agora sdk, communicating with backend, set of stores, added components.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@nuxt/icon": "^1.4.7",
     "@nuxtjs/leaflet": "^1.2.2",
     "@pinia/nuxt": "^0.5.4",
-    "@vueuse/core": "^11.0.1",
+    "@unovis/ts": "^1.4.3-beta.0",
+    "@unovis/vue": "^1.4.3-beta.0",
+    "@vueuse/core": "^11.0.3",
     "agora-rtc-sdk-ng": "^4.22.0",
     "axios": "^1.7.5",
     "class-variance-authority": "^0.7.0",
